--- a/index.html
+++ b/index.html
@@ -236,17 +236,17 @@
     <div id="popupModal" class="modal">
         <div class="modal-content">
             <button class="close-btn" id="closeModal">&times;</button>
-            <h2>Haii. Selamat datang di TOPUPSKUY</h2>
-            <p>Kami berusaha memberikan layanan terbaik yang kami miliki dengan harga termurah dan terpecaya hanya untuk anda.</p>
+            <h2>Haii. Selamat datang di TOPUPSKUY-TECHNOLOGY</h2>
+            <p>Kami berusaha memberikan layanan terbaik yang kami miliki dengan akses termudah.</p>
         </div>
     </div>
   <div id="effetsalju"></div>
   <main>
     <div class="container shadow">
-      <img class="image" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiSkDLolxx4KhqV5a6OIvd-47MfLaYzggPhkdSWj7HCsWovaxrrVdJrzr_tigy0JtW-B3sWFACfL3zY3VpBR43b88TpcZX7IUqEbSuKHzXQ59VXi4vI5ERcGjFYgWwEN31iy9BXGyaOd17i5fQwmn1z4KrdNKCrrrhy-2BP1-ZKaHtxxawGmcafmnGQtkD0/s320/Search%20Bar%20Instagram%20Post_20241122_074654_0000.png" alt="Topup Skuy Picture" loading="lazy">
+      <img class="image" src="https://raw.githubusercontent.com/Topupskuy/Technology/refs/heads/main/images%20(64).jpeg" alt="Topup Skuy Picture" loading="lazy">
       <!-- <h1>Landing Page Profile</h1> -->
-      <p class="occupation">TopupSkuy menyediakan akses aplikasi premium dan jasa transaksi yang aman, murah, dan terpercaya.<br/>
-      <u><a style="color:green" href="https://www.instagram.com/topupskuy_?igsh=MTM4ZWVkZXJvODR5cQ==" target="_blank">Testimoni</a></u></p>
+      <p class="occupation">TopupSkuy-Technology menyediakan akses siaran TV Lokal yang ramah dan simpel. Suport Admin dengan share halaman ini agar bisa berkembang dan banyak saluran TV lainnya.<br/>
+      <u><a style="color:blue" href="https://www.instagram.com/topupskuy_?igsh=MTM4ZWVkZXJvODR5cQ==" target="_blank">IG: @Topupskuy_</a></u></p>
       <hr/>
       <div class="link-boxes">
         
@@ -255,14 +255,19 @@
 		<!-- xxx -->
 		
 		<!-- <a class="shadow"title="Send a mail to AzkaGT" href="mailto:azkagt@menuju.my.id" target="_blank"><i class="fas fa-envelope" aria-hidden="true"></i> Email</a> -->
-        <a class="shadow" href="https://whatsapp.com/channel/0029VauupdECBtxFnQBjAf2d" target="_blank"><i class="fa-brands fa-whatsapp" aria-hidden="true"></i> SALURAN WHATSAPP</a>
-		<a class="shadow" href="https://padlet.com/topupskuy/Listing" target="_blank"><i class="fa fa-web-awesome icon" aria-hidden="true"></i> Aplikasi Premium </a>
-		<a class="shadow" href="https://padlet.com/topupskuy/breakout-room/6RDZ2yBgKZ75qyej-MV5obMV5nADjzD8e" target="_blank"><i class="fa fa-gamepad icon" aria-hidden="true"></i> TOP-UP Game </a>
-		<a class="shadow" href="https://padlet.com/topupskuy/breakout-room/65XOvBO9bVBo4GBQ-MV5obMV5nADjzD8e" target="_blank"><i class="fa fa-money icon" aria-hidden="true"></i> E-money/Bank/Simcard </a>
-		<a class="shadow" href="https://padlet.com/topupskuy/breakout-room/65XOvBO9bVBo4GBQ-MV5obMV5nADjzD8e" target="_blank"><i class="fa fa-bank icon" aria-hidden="true"></i> Transaksi All Bank </a>
-		<a class="shadow" href="https://padlet.com/topupskuy/breakout-room/65XOvBO9bVBo4GBQ-MV5obMV5nADjzD8e" target="_blank"><i class="fa fa-paypal icon" aria-hidden="true"></i> Convert Paypal </a>
-		<a class="shadow" href="https://padlet.com/topupskuy/breakout-room/961rqR9Jjmbd2nND-MV5obMV5nADjzD8e" target="_blank"><i class="fa fa-search" aria-hidden="true"></i> Cek Turnitin </a>
-    <a class="shadow" href="https://padlet.com/topupskuy/breakout-room/GyPQvXlJeEbGv3OL-MV5obMV5nADjzD8e" target="_blank"><i class="fa fa-circle-exclamation icon" aria-hidden="true"></i> S&K Order/Garansi </a>
+        <a class="shadow" href="https://topupskuy.github.io/" target="_blank"><i class="fa-brands fa-whatsapp" aria-hidden="true"></i> APLIKASI/TOPUP/GAME/ETC</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/8846758856300890009')"><i class="fa fa-television" aria-hidden="true"></i> RCTI</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/204120642705976591')"><i class="fa fa-television" aria-hidden="true"></i> TRANS 7</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/7461365739084476677')"><i class="fa fa-television" aria-hidden="true"></i> TRANS TV</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/9020123072158268553')"><i class="fa fa-television" aria-hidden="true"></i> MNCTV</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/2136782808780218174')"><i class="fa fa-television" aria-hidden="true"></i> GLOBAL TV</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/8760555620813729501')"><i class="fa fa-television" aria-hidden="true"></i> INEWS</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/614106687954908398')"><i class="fa fa-television" aria-hidden="true"></i> CNN</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/9134397162637937387')"><i class="fa fa-television" aria-hidden="true"></i> DETIK TV</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/3195471097460607295')"><i class="fa fa-television" aria-hidden="true"></i> CNBC</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/596071981630200426')"><i class="fa fa-television" aria-hidden="true"></i> BTV</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/6369764227672287538')"><i class="fa fa-television" aria-hidden="true"></i> SCTV</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/7284415503359787737')"><i class="fa fa-television" aria-hidden="true"></i> INDOSIAR</a>
     </div>
       <hr/>
       <p class="location"><i class="fa fa-map-marker icon" aria-hidden="true"></i> Source Asli Web ini dari : <a href="https://putu.me/" target="_blank">putu.me</a></p>
