--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     <div class="container shadow">
       <img class="image" src="https://raw.githubusercontent.com/Topupskuy/Technology/refs/heads/main/images%20(64).jpeg" alt="Topup Skuy Picture" loading="lazy">
       <!-- <h1>Landing Page Profile</h1> -->
-      <p class="occupation">TopupSkuy-Technology menyediakan akses siaran TV Lokal yang ramah dan simpel. Suport Admin dengan share halaman ini agar bisa berkembang dan banyak saluran TV lainnya.<br/>
+      <p class="occupation" style="font-size:13px"><a>TopupSkuy-Technology menyediakan akses siaran TV Lokal yang ramah dan simpel. Suport Admin dengan share halaman ini agar bisa berkembang dan banyak saluran TV lainnya.<br/>
       <u><a style="color:blue" href="https://www.instagram.com/topupskuy_?igsh=MTM4ZWVkZXJvODR5cQ==" target="_blank">IG: @Topupskuy_</a></u></p>
       <hr/>
       <div class="link-boxes">
@@ -255,7 +255,7 @@
 		<!-- xxx -->
 		
 		<!-- <a class="shadow"title="Send a mail to AzkaGT" href="mailto:azkagt@menuju.my.id" target="_blank"><i class="fas fa-envelope" aria-hidden="true"></i> Email</a> -->
-        <a class="shadow" href="https://topupskuy.github.io/" target="_blank"><i class="fa-brands fa-whatsapp" aria-hidden="true"></i> APLIKASI/TOPUP/GAME/ETC</a>
+        <a class="shadow" style="font-size:15px" href="https://topupskuy.github.io/" target="_blank"><i class="fa fa-web-awesome icon" aria-hidden="true"></i> APLIKASI/TOPUP/GAME/ETC</a>
 		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/8846758856300890009')"><i class="fa fa-television" aria-hidden="true"></i> RCTI</a>
 		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/204120642705976591')"><i class="fa fa-television" aria-hidden="true"></i> TRANS 7</a>
 		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/7461365739084476677')"><i class="fa fa-television" aria-hidden="true"></i> TRANS TV</a>
