--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     }
 
     .container {
-      width: 28rem;
+      width: 35rem;
       padding: 1rem 2rem;
       background-color: rgba(255, 255, 255, 0.45);
       border-radius: 2rem;
@@ -237,7 +237,7 @@
         <div class="modal-content">
             <button class="close-btn" id="closeModal">&times;</button>
             <h2>Haii. Selamat datang di TOPUPSKUY-TECHNOLOGY</h2>
-            <p>Kami berusaha memberikan layanan terbaik yang kami miliki dengan akses termudah.</p>
+            <p style="font-size:13px">Kami berusaha memberikan layanan terbaik yang kami miliki dengan akses termudah.</p>
         </div>
     </div>
   <div id="effetsalju"></div>
@@ -245,7 +245,7 @@
     <div class="container shadow">
       <img class="image" src="https://raw.githubusercontent.com/Topupskuy/Technology/refs/heads/main/images%20(64).jpeg" alt="Topup Skuy Picture" loading="lazy">
       <!-- <h1>Landing Page Profile</h1> -->
-      <p class="occupation" style="font-size:13px"><a>TopupSkuy-Technology menyediakan akses siaran TV Lokal yang ramah dan simpel. Suport Admin dengan share halaman ini agar bisa berkembang dan banyak saluran TV lainnya.<br/>
+      <p class="occupation" style="font-size:13px; text-align: center;"><a>TopupSkuy-Technology<br/>menyediakan akses siaran TV Lokal yang ramah dan simpel. Suport Admin dengan share halaman ini agar bisa berkembang dan banyak saluran TV lainnya.<br/>
       <u><a style="color:blue" href="https://www.instagram.com/topupskuy_?igsh=MTM4ZWVkZXJvODR5cQ==" target="_blank">IG: @Topupskuy_</a></u></p>
       <hr/>
       <div class="link-boxes">
