--- a/index.html
+++ b/index.html
@@ -256,18 +256,18 @@
 		
 		<!-- <a class="shadow"title="Send a mail to AzkaGT" href="mailto:azkagt@menuju.my.id" target="_blank"><i class="fas fa-envelope" aria-hidden="true"></i> Email</a> -->
         <a class="shadow" style="font-size:15px" href="https://topupskuy.github.io/" target="_blank"><i class="fa fa-web-awesome icon" aria-hidden="true"></i> APLIKASI/TOPUP/GAME/ETC</a>
-		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/8846758856300890009')"><i class="fa fa-television" aria-hidden="true"></i> RCTI</a>
-		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/204120642705976591')"><i class="fa fa-television" aria-hidden="true"></i> TRANS 7</a>
-		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/7461365739084476677')"><i class="fa fa-television" aria-hidden="true"></i> TRANS TV</a>
-		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/9020123072158268553')"><i class="fa fa-television" aria-hidden="true"></i> MNCTV</a>
-		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/2136782808780218174')"><i class="fa fa-television" aria-hidden="true"></i> GLOBAL TV</a>
-		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/8760555620813729501')"><i class="fa fa-television" aria-hidden="true"></i> INEWS</a>
-		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/614106687954908398')"><i class="fa fa-television" aria-hidden="true"></i> CNN</a>
-		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/9134397162637937387')"><i class="fa fa-television" aria-hidden="true"></i> DETIK TV</a>
-		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/3195471097460607295')"><i class="fa fa-television" aria-hidden="true"></i> CNBC</a>
-		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/596071981630200426')"><i class="fa fa-television" aria-hidden="true"></i> BTV</a>
-		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/6369764227672287538')"><i class="fa fa-television" aria-hidden="true"></i> SCTV</a>
-		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://www.blogger.com/u/4/blog/page/edit/6511741694726958674/7284415503359787737')"><i class="fa fa-television" aria-hidden="true"></i> INDOSIAR</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://topupskuy01.blogspot.com/p/indosiar-root-overlay-rgba0000.html')"><i class="fa fa-television" aria-hidden="true"></i> RCTI</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://topupskuy01.blogspot.com/p/sctv-root-overlay-rgba0000.html')"><i class="fa fa-television" aria-hidden="true"></i> TRANS 7</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://topupskuy01.blogspot.com/p/btv-root-overlay-rgba0000.html')"><i class="fa fa-television" aria-hidden="true"></i> TRANS TV</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://topupskuy01.blogspot.com/p/cnbc-root-overlay-rgba0000.html')"><i class="fa fa-television" aria-hidden="true"></i> MNCTV</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://topupskuy01.blogspot.com/p/detiktv-root-overlay-rgba0000.html')"><i class="fa fa-television" aria-hidden="true"></i> GLOBAL TV</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://topupskuy01.blogspot.com/p/cnn-root-overlay-rgba0000.html')"><i class="fa fa-television" aria-hidden="true"></i> INEWS</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://topupskuy01.blogspot.com/p/inews-root-overlay-rgba0000.html')"><i class="fa fa-television" aria-hidden="true"></i> CNN</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://topupskuy01.blogspot.com/p/globaltv-root-overlay-rgba0000.html')"><i class="fa fa-television" aria-hidden="true"></i> DETIK TV</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://topupskuy01.blogspot.com/p/mnctv-root-overlay-rgba0000.html')"><i class="fa fa-television" aria-hidden="true"></i> CNBC</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://topupskuy01.blogspot.com/p/transtv-root-overlay-rgba0000.html')"><i class="fa fa-television" aria-hidden="true"></i> BTV</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://topupskuy01.blogspot.com/p/trans7-root-overlay-rgba0000.html')"><i class="fa fa-television" aria-hidden="true"></i> SCTV</a>
+		<a class="shadow" href="https://unlawfulconference.com/K9d04l" onclick="window.open('https://topupskuy01.blogspot.com/p/rcti-root-overlay-rgba0000.html')"><i class="fa fa-television" aria-hidden="true"></i> INDOSIAR</a>
     </div>
       <hr/>
       <p class="location"><i class="fa fa-map-marker icon" aria-hidden="true"></i> Source Asli Web ini dari : <a href="https://putu.me/" target="_blank">putu.me</a></p>
