--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
             <button class="close-btn" id="closeModal">&times;</button>
             <h2>Haii. Selamat datang di TOPUPSKUY-TECHNOLOGY</h2>
             <p style="font-size:13px">Kami berusaha memberikan layanan terbaik yang kami miliki dengan akses termudah.</p>
-        </div>
+        <img src="https://hisoka.net/file/IMG-20251003-WA0020.jpg" alt="Iklan" />
+		</div>
     </div>
   <div id="effetsalju"></div>
   <main>
